manifests/lldap/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
  namespace: security
spec:
  parentRefs:
    - name: cilium-gateway-internal
      namespace: kube-system
      sectionName: https-home-lex-la
  hostnames:
    - lldap.home.lex.la
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lldap
          port: 17170
